src/assets/styles/pages/home-page.css
.HomePage {
    .section-header {
        @apply text-center;
    }

    .section-header-desc {
        @apply mb-8 lg:text-center lg:max-w-[50dvw] lg:mx-auto;
    }

    .Hero {
        @apply h-[40dvh] flex items-center justify-center;
        @apply lg:min-h-[90dvh];

        .container-fluid {
            .hero-text {
                @apply space-y-8;
                @apply md:text-center md:max-w-6xl md:mx-auto;

                .content {
                    @apply space-y-8;

                    .punchline {
                        @apply text-heading-text font-bold font-accent;
                        @apply lg:text-xl-text;
                    }

                    .description {
                        @apply md:text-heading-text md:w-[75%] md:mx-auto;
                    }
                }

                .hero-btns {
                    @apply flex gap-4;
                    @apply md:gap-8 md:justify-center;

                    a {
                        @apply inline-block;

                        &.btn-primary {
                            @apply flex items-center gap-1;
                        }
                    }
                }
            }
        }
    }

    .About {
        .container-fluid {
            p {
                @apply md:w-[75%] md:mx-auto md:text-heading-text md:text-center;

                .inline-link {
                    @apply inline-flex items-center gap-1;

                    svg {
                        @apply w-4 h-4;
                    }
                }
            }
        }
    }

    .Services {
        .container-fluid {
            .services-wrapper {
                @apply grid lg:grid-cols-2 gap-8;

                .service {
                    @apply space-y-2 p-2 bg-highlight rounded-lg;

                    .image-wrapper {
                        @apply w-full h-[30dvh] lg:h-[40dvh] relative bg-dark-accent p-2 rounded-lg;

                        .image {
                            @apply w-full h-full rounded-lg;

                            img {
                                @apply rounded-lg;
                            }
                        }
                    }

                    .content {
                        @apply p-4 space-y-4;

                        .info {
                            @apply space-y-2;
                        }

                        p {
                            &:nth-of-type(1) {
                                @apply font-bold;
                            }
                        }
                    }
                }
            }
        }
    }

    .Process {
        .container-fluid {
            .process-steps {
                @apply grid lg:grid-cols-3 gap-8;

                .step {
                    @apply space-y-2 p-4 bg-highlight rounded-lg;

                    p {
                        &:nth-of-type(1) {
                            @apply font-bold text-muted-foreground;
                        }

                        &:nth-of-type(2) {
                            @apply font-bold;
                        }
                    }
                }
            }
        }
    }

    .Works {
        .container-fluid {
            .works-wrapper {
                @apply grid gap-8;

                .work {
                    @apply grid lg:grid-cols-2 items-center gap-8 bg-highlight rounded-lg p-4;

                    .content {
                        @apply space-y-4;

                        .title {
                            @apply font-bold text-heading-text;
                        }

                        .outcome {
                            @apply border-l-4 border-accent pl-2 py-1;
                        }
                    }

                    .image {
                        @apply w-full h-[30dvh] lg:h-[40dvh];

                        img {
                            @apply object-contain;
                        }
                    }
                }
            }
        }
    }

    .CTA {
        .container-fluid {
            @apply grid gap-8;
            @apply lg:grid-cols-2;

            .left {
                @apply space-y-4;

                .title {
                    @apply font-accent font-bold text-l-text;
                    line-height: 1.03;
                }

                .description {
                    @apply lg:w-[90%];
                }

                .extras {
                    @apply flex flex-wrap gap-8;

                    div {
                        @apply flex gap-1 items-center;

                        svg {
                            @apply w-4 h-4;
                        }

                        span {
                            @apply text-body-label-text;
                        }
                    }
                }
            }
        }
    }
}

